--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ to examine whether good examples are always better than bad examples| 2 scatter 
 show the outliners | facets | for next experiment | (5)
 ---
 # Experiment 1- (1)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/1.png" width="708" /&gt;
+&lt;img src="1.png" width="708" /&gt;
 ---
 # Experiment 1- (2)
 &lt;img src="/Users/Chaoyi/Desktop/online presentation/2.png" width="641" /&gt;
