--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@ show the outliners | facets | for next experiment | (5)
 
 ---
 # Experiment 1- (2)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/2.png" width="641" /&gt;
+![image](2.png)
+
 ---
 # Experiment 1- (3)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/3.png" width="627" /&gt;
+![image](3.png)
 ---
 # Experiment 1- (4)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/4.png" width="612" /&gt;
+![image](4.png)
 ---
 # Experiment 1- (5)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/5.png" width="713" /&gt;
+![image](5.png)
 ---
 # Appropriateness/novelty of analysis
   + The two-tailed paired t-test is an appropriate analysis for the cases where we want to see if there is any significant differences among categorical predictors; 
@@ -114,10 +115,10 @@ to test if the proportion of choosing a “good” sentence as the better one wa
 to verify if the difference is significant for each pair | facets |to look into individual differences|(2)
 ---
 # Experiment 2- (1)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/6.png" width="725" /&gt;
+![image](6.png)
 ---
 # Experiment 2- (2)
-&lt;img src="/Users/Chaoyi/Desktop/online presentation/7.png" width="708" /&gt;
+![image](7.png)
 ---
 # Appropriateness/novelty of analysis
 
